@@ -30,12 +30,12 @@ dovecot_config()
 
     backup_file ${DOVECOT_CONF}
 
-    # RHEL/CentOS 7:            Dovecot-2.2.32+
+    # RHEL/CentOS 7:            Dovecot-2.2.36+
     # Debian 9:                 Dovecot-2.2.27
+    # Debian 10:                Dovecot-2.3.4+
     # Ubuntu 18.04 (bionic):    Dovecot-2.2.33
-    # Ubuntu 19.04 (disco):     Dovecot-2.3.x
     # FreeBSD:                  Dovecot-2.3.0+
-    # OpenBSD 6.5:              Dovecot-2.3.5.1
+    # OpenBSD 6.5:              Dovecot-2.3.7+
     ECHO_DEBUG "Copy sample Dovecot config file to ${DOVECOT_CONF}."
     if [ X"${DOVECOT_VERSION}" == X'2.2' ]; then
         cp ${SAMPLE_DIR}/dovecot/dovecot22.conf ${DOVECOT_CONF}
