@@ -165,9 +165,19 @@ gpgcheck=0
 EOF
     fi
 
-    # For OpenLDAP server on RHEL/CentOS 8.
-    if [ X"${DISTRO}" == X"RHEL" -a X"${DISTRO_VERSION}" == X'8' -a X"${BACKEND}" == X'OPENLDAP' ]; then
-        cat > ${YUM_REPOS_DIR}/sympa-openldap.repo <<EOF
+    # RHEL/CentOS 8.
+    if [ X"${DISTRO}" == X"RHEL" -a X"${DISTRO_VERSION}" == X'8' ]; then
+        # repo PowerTools is required.
+        if [ -f /etc/yum.repos.d/CentOS-PowerTools.repo ]; then
+            yum config-manager --set-enabled PowerTools
+        else
+            # TODO Create repo file.
+            :
+        fi
+
+        # For OpenLDAP server.
+        if [ X"${BACKEND}" == X'OPENLDAP' ]; then
+            cat > ${YUM_REPOS_DIR}/sympa-openldap.repo <<EOF
         [sympa-openldap]
 name=Symas OpenLDAP for Linux RPM repository
 baseurl=https://repo.symas.com/repo/rpm/SOFL/rhel8
@@ -175,6 +185,7 @@ gpgkey=https://repo.symas.com/repo/gpg/RPM-GPG-KEY-symas-com-signing-key
 gpgcheck=1
 enabled=1
 EOF
+        fi
     fi
 
     eval ${install_pkg} epel-release
