@@ -253,7 +253,7 @@ plugin {
 
     # Track user last login
     last_login_dict = proxy::lastlogin
-    last_login_key = last-login/%u/%d
+    last_login_key = last-login/%s/%u/%d
 }
 
 service stats {
