@@ -1,4 +1,8 @@
 iRedMail-1.2:
+    * Improvements:
+        - Track last login of both POP3/IMAP logins, also when new (last one)
+          email was delivered via LMTP/LDA.
+
     * Fixed issues:
         - Use 'pspell' spell check engine instead of default 'googie' which
           sends data to Roundcube website.
